# xCrack

./: .env.micro_arbitrage.example  .env.sandwich.example  .gitignore  Cargo.toml  Dockerfile  README.md  check_compile.sh  docker-compose.yml  final_check.sh  foundry.toml  start-all.sh  stop-all.sh  test_compile.sh
.cursor/: .tasks.md  rules.md
.husky/: pre-commit
abi/: AaveDataProvider.json  AaveOracle.json  AavePool.json  CompoundCToken.json  CompoundComptroller.json  CompoundOracle.json  MakerCDPManager.json  MakerVat.json  aave_lending_pool.json  erc20.json  uniswap_v2_pair.json  uniswap_v2_router.json
ai_predictor/: .env.example  README.md  __init__.py  requirements.txt
ai_predictor/config/: settings.yaml
ai_predictor/src/: main.py
config/: default.toml
contracts/: Arbitrage.sol  FlashLoanLiquidationReceiver.sol  FlashLoanStrategyExecutor.sol  Liquidation.sol  LiquidationStrategy.sol  MicroArbitrageStrategy.sol  MultiAssetArbitrage.sol  Sandwich.sol  SandwichAttackStrategy.sol
contracts/interfaces/: IProtocols.sol
contracts/test/: MockERC20.sol
crack_front/: README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
crack_front/app/: globals.css  layout.tsx  layout.tsx.backup  page.tsx  page.tsx.backup
crack_front/components/: theme-provider.tsx
crack_front/lib/: api.ts  api.ts.backup
docs/: 1_sandwich.md  2.liquiation.md  3_micro_arbitrage.md  4.cross-chain-arbitrage.md  AI_INTEGRATION_ARCHITECTURE.md  AI_PREDICTOR.md  API_REFERENCE.md  ARBITRAGE_TUTORIAL.md  ARCHITECTURE.md  CROSS_CHAIN_STATUS.md  ENVIRONMENT_SETUP.md  FLASHLOAN_SETUP.md  FRONTEND_TUTORIAL.md  LIQUIDATION_CONTRACT.md  LIQUIDATION_DETECTION_BEGINNER.md  LIQUIDATION_DETECTION_COMPLETED.md  LIQUIDATION_FLOW.md  LIQUIDATION_RUST.md  LIQUIDATION_SEARCH.md  LIQUIDATION_STRATEGY.md  MICRO_ARBITRAGE_CONTRACT.md  MICRO_ARBITRAGE_FLOW.md  MICRO_ARBITRAGE_RUST.md  MICRO_ARBITRAGE_STRATEGY.md  MOCK_PRODUCTION_GUIDE.md  PERFORMANCE_COMPONENTS_TUTORIAL.md  PROJECT_SEPARATION_PLAN.md  RUNNING.md  SANDWICH_CONTRACT.md  SANDWICH_FLOW.md  SANDWICH_RUST.md  SANDWICH_STRATEGY.md  STEP_BY_STEP.md  STRATEGY_DOCUMENTATION.md  UI_TUTORIAL.md  WEB_TUTORIAL.md  architecture.md  cross-chain-arbitrage-system-architecture.md  gas_optimization.md  liquidation-strategy-system-architecture.md  (+16 more)
examples/: gas_optimization_example.rs  onchain_strategies.rs
migrations/: 001_init.sql
script/: DeployReceiver.s.sol  SimulateReceiver.s.sol  test_multi_asset.sol
scripts/: build.sh  install-hooks.sh  run_ai_predictor.sh  run_integrated_system.sh  start.sh  test.sh
src/: api.rs  config.rs  constants.rs  execution.rs  lib.rs  main.rs  monitoring.rs  types.rs  utils.rs
src/.cursor/: project.mdc
src/adapters/: factory.rs  mod.rs  oneinch.rs  sushiswap.rs  traits.rs  uniswap_v2.rs  uniswap_v3.rs  zeroex.rs
src/backtest/: data_provider.rs  engine.rs  mod.rs  performance.rs  scenarios.rs
src/blockchain/: abi.rs  contracts.rs  decoder.rs  events.rs  mod.rs  rpc.rs
src/bridges/: across.rs  dynamic_scorer.rs  hedging_strategy.rs  hop.rs  lifi.rs  manager.rs  mod.rs  multichain.rs  performance_tracker.rs  profit_verifier.rs  rubic.rs  stargate.rs  synapse.rs  target_execution.rs  traits.rs  transaction_monitor.rs
src/common/: abi.rs  math.rs  mod.rs  profitability.rs  utils.rs
src/core/: bundle_manager.rs  mempool_monitor.rs  micro_arbitrage_orchestrator.rs  mod.rs  monitoring_manager.rs  performance_tracker.rs  searcher_core.rs  transaction_builder.rs
src/dex/: aggregator.rs  mod.rs  oneinch_api.rs  ox_api.rs  uniswap.rs
src/exchange/: client.rs  mod.rs  monitor.rs  order_executor.rs  price_feed_manager.rs  real_time_scheduler.rs
src/execution/: mod.rs  transaction_builder.rs
src/flashbots/: bundle.rs  client.rs  mod.rs
src/mempool/: filters.rs  mod.rs  monitor.rs
src/mev/: analytics.rs  boost.rs  bundle.rs  bundle_executor.rs  flashbots.rs  mempool.rs  mod.rs  opportunity.rs  protection.rs  (+2 more)
(+149 files in other folders)
