[package]
name = "xcrack-rust-mev-searcher"
version = "0.1.0"
edition = "2021"
authors = ["xCrack Team <team@xcrack.dev>"]
description = "High-performance MEV searcher bot built entirely in Rust"
license = "MIT"
repository = "https://github.com/xcrack/mev-searcher-rust"

[[bin]]
name = "searcher"
path = "src/main.rs"



[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# WebSocket and Futures
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Database
redis = { version = "0.23", features = ["tokio-comp"] }

# Math & precision
rust_decimal = { version = "1.32", features = ["serde"] }
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"

# Concurrency
futures = "0.3"
dashmap = "5.5"

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Performance
rayon = "1.7"

# Crypto
hex = "0.4"
sha3 = "0.10"

# Ethereum & Blockchain
alloy = { version = "1.0.6", features = [
    "full",
    "node-bindings",
    "rpc-types-debug",
    "rpc-types-trace",
    "json-rpc",
    "rpc-client",
    "signer-aws",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",     
    "signer-trezor",
    "signer-yubihsm",
    "eips",
] }
ethers = { version = "2.0", features = ["ws", "rustls"] }

# Utils
uuid = { version = "1.0", features = ["v4", "serde"] }
once_cell = "1.19"
rand = "0.8"
fastrand = "2.0"

# Testing
tempfile = "3.8"
hmac = "0.12.1"
sha2 = "0.10.9"
base64 = "0.22.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
